--- a/src/main/resources/archetype-resources/platform/raspberry.properties
+++ b/src/main/resources/archetype-resources/platform/raspberry.properties
@@ -21,3 +21,4 @@ target.debug.port=1955
 target.run.as.root=true
 ${symbol_pound} The remote target root folder where your projects is deployed
 target.remote.home=/home/pi/NetBeansProjects
+target.run.module.class=${groupId}.${artifactId}/${package}.${main-class}
