--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -16,6 +16,10 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<target.platform.name>raspberry</target.platform.name>
+		<run.with.java.module>${useJavaPlatformModuleSystem}</run.with.java.module>
+<!--		Use jvmargs to pass args like -Dpi4j.library.path=<Path to the libpi4j-pigpio.so library>-->
+		<jvmargs.run></jvmargs.run>
+		<jvmargs.debug></jvmargs.debug>
 		
 		<slf4j.version>2.0.0-alpha1</slf4j.version>
 		<pi4j.version>2.0-SNAPSHOT</pi4j.version>
@@ -70,6 +74,18 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>${maven.compiler.source}</release>
+					<target>${maven.compiler.target}</target>
+					<showDeprecation>true</showDeprecation>
+					<showWarnings>true</showWarnings>
+					<verbose>false</verbose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.1.2</version>
 				<executions>
@@ -92,13 +108,14 @@
 				<version>3.2.0</version>
 				<configuration>
 					<archive>
-								<manifest>																														
+						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathLayoutType>custom</classpathLayoutType>
 							<customClasspathLayout>lib/${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
 							<mainClass>${package}.${main-class}</mainClass>
 						</manifest>
 					</archive>
+					<outputDirectory>${finalJarDir}</outputDirectory>
 				</configuration>
 			</plugin>
 			<!--plugin>
@@ -129,6 +146,21 @@
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>3.0.0</version>
 				<executions>
+					<execution>
+						<id>setMavenJarPluginOutputDir</id>
+						<phase>compile</phase>
+						<configuration>
+							<exportAntProperties>true</exportAntProperties>
+							<target>
+								<condition property="finalJarDir" value="${project.build.directory}/lib" else="${project.build.directory}">
+									<equals arg1="${run.with.java.module}" arg2="true" casesensitive="" />
+								</condition>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
 					<execution>
 						<id>clean</id>
 						<phase>clean</phase>
@@ -163,6 +195,8 @@
 						<id>exec</id>
 						<configuration>
 							<target>
+								<property name="remote.run.jvmargs" value="${jvmargs.run}" />
+								<property name="target.run.as.module" value="${run.with.java.module}" />
 								<property name="local.dist.dir" value="${project.build.directory}" />		
 								<property name="remote.runtime.encoding" value="UTF-8" />
 								<property name="dist.jar.name" value="${project.build.finalName}" />		
@@ -177,6 +211,8 @@
 						<id>debug</id>
 						<configuration>
 							<target>
+								<property name="remote.debug.jvmargs" value="${jvmargs.debug}" />
+								<property name="target.run.as.module" value="${run.with.java.module}" />
 								<property name="local.dist.dir" value="${project.build.directory}" />		
 								<property name="remote.runtime.encoding" value="UTF-8" />
 								<property name="dist.jar.name" value="${project.build.finalName}" />		
