Add groovy dependency and config for deleting module-info.java

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,17 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>11</java.version>
+    <groovy-all-version>3.0.7</groovy-all-version>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>${groovy-all-version}</version>
+      <type>pom</type>
+    </dependency>
+  </dependencies>
 
   <build>
     <extensions>
@@ -20,10 +30,35 @@
         <groupId>org.apache.maven.archetype</groupId>
         <artifactId>archetype-packaging</artifactId>
         <version>3.2.0</version>
-<!--        I used this with basic psxcad -> de ce?-->
-<!--        <version>3.0.1</version>-->
       </extension>
     </extensions>
+
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.gmavenplus</groupId>
+        <artifactId>gmavenplus-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>addSources</goal>
+              <goal>generateStubs</goal>
+              <goal>compile</goal>
+              <goal>removeStubs</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <sources>
+            <source>
+              <directory>${project.basedir}/src/main/resources/META-INF</directory>
+              <includes>
+                <include>**/*.groovy</include>
+              </includes>
+            </source>
+          </sources>
+        </configuration>
+      </plugin>
+    </plugins>
 
     <pluginManagement>
       <plugins>
@@ -78,6 +113,11 @@
           <configuration>
             <addDefaultExcludes>false</addDefaultExcludes>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.gmavenplus</groupId>
+          <artifactId>gmavenplus-plugin</artifactId>
+          <version>1.12.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
