--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -6,10 +6,13 @@
     <version>${version}</version>
     <packaging>jar</packaging>
     <name>${project-name}</name>
-    <!--organization>
+
+    <!--
+    <organization>
         <name></name>
         <url></url>
-    </organization-->
+    </organization>
+    -->
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,26 +20,14 @@
         <maven.compiler.target>11</maven.compiler.target>
         <target.platform.name>raspberry</target.platform.name>
         <run.with.java.module>${useJavaPlatformModuleSystem}</run.with.java.module>
-<!--        Use jvmargs to pass args like -Dpi4j.library.path=<Path to the libpi4j-pigpio.so library>-->
+        <!-- Use jvmargs to pass args like -Dpi4j.library.path=<Path to the libpi4j-pigpio.so library> -->
         <jvmargs.run></jvmargs.run>
         <jvmargs.debug></jvmargs.debug>
-        
-        <slf4j.version>2.0.0-alpha1</slf4j.version>
-        <pi4j.version>2.0-SNAPSHOT</pi4j.version>
+
+        <slf4j.version>1.7.32</slf4j.version>
+        <pi4j.version>2.1.0</pi4j.version>
     </properties>
-    
-    <repositories>
-        <repository>
-            <id>oss-snapshots-repo</id>
-            <name>Sonatype OSS Maven Repository</name>
-            <url>https://oss.sonatype.org/content/groups/public</url>
-            <releases>
-            </releases>
-            <snapshots>
-            </snapshots>
-        </repository>
-    </repositories>
-        
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
